# IndexGraph

./: .gitignore  .travis.yml  Makefile  README.txt  client.sh  stinger.cfg
IndexGraph_github/: CMakeLists.txt
IndexGraph_github/lib/stinger_core/inc/: indirect_index.h  stinger_batch_insert.h  x86_full_empty.h
IndexGraph_github/lib/stinger_core/src/: shared_buffer.cpp
IndexGraph_github/lib/stinger_net/src/: send_rcv.cpp  stinger_mon.cpp  stinger_server_state.cpp
IndexGraph_github/src/: CMakeLists.txt
IndexGraph_github/src/algorithms/: CMakeLists.txt
IndexGraph_github/src/clients/streams/: CMakeLists.txt
IndexGraph_github/src/clients/streams/csv_stream/src/: main.cpp
IndexGraph_github/src/server/inc/: server.h
IndexGraph_github/src/server/src/: alg_handling.cpp  batch_server.cpp
lib/: CMakeLists.txt
lib/stinger_core/: CMakeLists.txt
lib/stinger_core/inc/: bitmap.hpp  core_util.h  defs.h  shared_buffer.h  traversal.h  vertex_array.h
lib/stinger_core/src/: core_util.c  indirect_index.cpp  stinger_shared.c  vertex_array.cpp  x86_full_empty.c
lib/stinger_net/inc/: stinger_mon.h  stinger_server_state.h
lib/stinger_net/proto/: stinger-batch.proto
lib/stinger_net/src/: stinger_alg.cpp  stinger_stream.cpp
lib/stinger_utils/: CMakeLists.txt
lib/stinger_utils/inc/: timer.h
lib/stinger_utils/src/: timer.c
src/algorithms/diameter/: main.cpp
src/clients/streams/csv_stream/inc/: explore_csv.h
src/server/: CMakeLists.txt
src/server/src/: batch.cpp  server.cpp
